okg name changed

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "yegnabet",
-  "short_name": "yegnabet",
+  "name": "rentify",
+  "short_name": "rentify",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
