--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application
-        android:label="yegnabet"
+        android:label="rentify"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
