--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "yegnabet" "\0"
+            VALUE "FileDescription", "rentify" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "yegnabet" "\0"
+            VALUE "InternalName", "rentify" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "yegnabet.exe" "\0"
-            VALUE "ProductName", "yegnabet" "\0"
+            VALUE "OriginalFilename", "rentify.exe" "\0"
+            VALUE "ProductName", "rentify" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
