--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          flutter-version: '3.38.0'
 
       - name: Install dependencies
         run: flutter pub get
